# patterpunk

./: .env.sample  .gitignore  AGENTS.md  ANTHROPIC_FUNCTION_CALLING.md  CLAUDE.md  DIAGNOSTICS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  INVESTIGATE.md  LOGGING.md  MULTIMODAL.md  PROMPT_CACHING.md  README.md  SERIALIZATION.md  STREAMING.md  TOOL_CALLING.md  anthropic_function_calling_example.py  azure-openai-analysis.md  chain_example.py  docker-compose.yml  example.py  pyproject.toml
.openhands/microagents/: general-style.md  python-style.md  repo.md  research.md
documentation/ai/cache-prompting/: IMPLEMENTATION.md  google-vertex-ai.md  ollama.md
documentation/ai/multimodal/: ANALYSIS.md  IMPLEMENTATION.md  anthropic.md  bedrock.md  google.md  ollama.md  openai.md
documentation/ai/refactor/: REFACTOR.md
documentation/cache-prompting/: anthropic.md  aws-bedrock.md  openai.md
examples/: azure_openai_example.py  cache_usage.py  image_generation_example.py
patterpunk/: .gitignore  Dockerfile  config.py  logger.py
patterpunk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
patterpunk/llm/: chat.py  decorators.py  messages.py  models.py  openai.py
patterpunk/src/: pytest.ini  requirements.txt  setup.py  test.requirements.txt
patterpunk/src/examples/: cache_usage.py
patterpunk/src/patterpunk/: config.py  logger.py
patterpunk/src/tests/: conftest.py  test_agents.py  test_anthropic.py  test_anthropic_streaming.py  (+38 more)
tasks/claude-md-compliance-review/: notes.md
tasks/code-quality-review/: notes.md
tasks/test-coverage-review/: notes.md
(+79 files in other folders)
