[project]
name = "patterpunk"
version = "0.0.1"
description = "An easy way to deal with LLMs, supporting chain-of-thought prompting and parameter tuning"
requires-python = ">=3.10"
authors = [{name = "Thomas Rubbert", email = "thomas.rubbert@yahoo.de"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "black>=23.9,<23.10",
    "openai>=0.28,<0.29",
    "pydantic>=2.4,<2.5",
    "jinja2>=3.1,<3.2"
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"